--- a/urbanbyte/index.html
+++ b/urbanbyte/index.html
@@ -19,8 +19,7 @@
 		}
       
       .title { 
-        height: 200px; 
-        width: 50%; 
+
         position: absolute;
         margin: auto;
         top: 0;
@@ -33,8 +32,8 @@
       }
       
       .slogan { 
-        height: 400px; 
-        width: 25%; 
+        height: 200px; 
+        width: 100%; 
         position: absolute;
         margin: auto;
         top: 560px;
@@ -43,9 +42,7 @@
         left: 0;
         font-size: 20px; 
         color: #ffffff; 
-        text-shadow: 0px 0px 0px #000000; 
-        text-align: center
-        filter: dropshadow(color=#000000, offx=0, offy=0); 
+        text-align: center;
       }
       .center-div
       {
@@ -59,6 +56,7 @@
         height: 100px;
         background-color: #ccc;
         border-radius: 3px;
+        text-align: center;
       }
 		
 		#page-wrap { width: 400px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
@@ -67,10 +65,8 @@
 </head>
 
 <body>
-  <div>
     <span class="title">&lt;/UrbanByte&gt;</span>
     <span class="slogan">Software for the 21st Century Artisan</span>
-  </div>
 </body>
 
 </html>
