--- a/urbanbyte/about.html
+++ b/urbanbyte/about.html
@@ -123,7 +123,7 @@
 				<div class="clear below-content"></div>
 				<div id="page-bottom">
 					<div id="page-bottom-contents">
-						<div>;© Que-it 2014                                                                                                                                                                                   info@que-it.com                                                                                                                                                                                    </div>
+						<div>© Que-it 2014                                                                                                                                                                                                                                                                                                                                                                       </div>
 						<div class="hidden"> <a rel="nofollow" href="#title">[Back To Top]</a></div>
 					</div>
 				</div> <!-- page-bottom -->
