--- a/urbanbyte/contact-us.html
+++ b/urbanbyte/contact-us.html
@@ -57,7 +57,7 @@
 									<div class="RichTextElement">
 										<div><p><br /></p>
 											
-											<div class="first graphic-container wide center">
+											<div class="first graphic-container wide left">
 												<div style="" class="graphic">
 													<div class="figure-content">
 														<!-- sandvox.ContactElement -->
@@ -161,7 +161,7 @@
 				<div class="clear below-content"></div>
 				<div id="page-bottom">
 					<div id="page-bottom-contents">
-						<div>;© Que-it 2014                                                                                                                                                                                   info@que-it.com                                                                                                                                                                                    </div>
+						<div>© Que-it 2014                                                                                                                                                                                                                                                                                                                                                                       </div>
 						<div class="hidden"> <a rel="nofollow" href="#title">[Back To Top]</a></div>
 					</div>
 				</div> <!-- page-bottom -->
