--- a/urbanbyte/que-it.html
+++ b/urbanbyte/que-it.html
@@ -89,28 +89,28 @@
 							<div class="article">
 								<div class="article-content">
 									<div class="RichTextElement">
-										<div><p class="MsoNormal"><span style="font-family: Skia; color: black; font-size: 14px;">Que-It is an organizational iPad application for stage managers and
-																																												designers. The application allows the users to load a PDF of a script and then organizes
-																																												the Q’s into categories, such as lighting, sound, deck, and projection, however
-																																												categories are defined by the user and any system or organizational style can
-																																												be used with the application. </span></p><p class="MsoNormal"><span style="font-family: Skia; color: black; font-size: 14px;">The application also has the ability to create a
-																																												prefix for each list as well as the ability to hide and show individual lists.   This application has the capability to auto
-																																												number or letter each Q list, or allow the user to load in a number or letter.  It also allows the user to enter data as to
-																																												what the purpose of the Q is. Once the information is set, the application will
-																																												auto stand-by the script.  All of this
-																																												data can be manipulated within the
-																																												application allowing the user to edit a cue's data as well as allowing the user
-																																												to change the location of the cue or remove the cue from the script.  </span></p><p class="MsoNormal"><span style="font-family: Skia; color: black; font-size: 14px;">At each stage of the work the file can be
-																																												saved to a cloud or server for back up. Once the information is set to the
-																																												users needs the application will auto stand-by the script.  The user can then leave these stand-by’s individual
-																																												or combine them across Q lists.  The application
-																																												allows the user to customize settings giving the choice of color for each
-																																												category.  Additional feature of the
-																																												application are managing a set of bookmarks for quick navigation, exporting and importing individual cue lists as well as entire shows for
-																																												sharing, storing contact information for each designer as
-																																												well as the venue the show is being produced in, ability to map a PDF
-																																												page number to a user defined page number, which will allow for better compatibility
-																																												with rehearsal scripts.</span></p></div>
+										<div><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 14px;">Que-It is an organizational iPad application for stage managers and
+																																																																													designers. The application allows the users to load a PDF of a script and then organizes
+																																																																													the Q’s into categories, such as lighting, sound, deck, and projection, however
+																																																																													categories are defined by the user and any system or organizational style can
+																																																																													be used with the application. </span></p><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 14px;">The application also has the ability to create a
+																																																																													prefix for each list as well as the ability to hide and show individual lists.   This application has the capability to auto
+																																																																													number or letter each Q list, or allow the user to load in a number or letter.  It also allows the user to enter data as to
+																																																																													what the purpose of the Q is. Once the information is set, the application will
+																																																																													auto stand-by the script.  All of this
+																																																																													data can be manipulated within the
+																																																																													application allowing the user to edit a cue's data as well as allowing the user
+																																																																													to change the location of the cue or remove the cue from the script.  </span></p><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 14px;">At each stage of the work the file can be
+																																																																													saved to a cloud or server for back up. Once the information is set to the
+																																																																													users needs the application will auto stand-by the script.(note about List)   The user can then leave these stand-by’s individual
+																																																																													or combine them across Q lists.  The application
+																																																																													allows the user to customize settings giving the choice of color for each
+																																																																													category.  Additional feature of the
+																																																																													application are managing a set of bookmarks for quick navigation, exporting and importing individual cue lists as well as entire shows for
+																																																																													sharing, storing contact information for each designer as
+																																																																													well as the venue the show is being produced in, ability to map a PDF
+																																																																													page number to a user defined page number, which will allow for better compatibility
+																																																																													with rehearsal scripts.</span></p><p class="MsoNormal"><span style="font-family: Skia; color: black; font-size: 14px;"><br /></span></p><p class="MsoNormal"><span style="color: rgb(79, 113, 174); font-family: Futura, 'Century Gothic', AppleGothic, Verdana, sans-serif; font-size: 19px; font-style: normal; font-variant: normal;">                     Software for the 21st Century Artisan</span><span style="font-family: Skia; color: black; font-size: 14px;"><br /></span></p></div>
 									</div>
 								</div> <!-- /article-content -->
 								<div class="article-info">
@@ -123,7 +123,7 @@
 				<div class="clear below-content"></div>
 				<div id="page-bottom">
 					<div id="page-bottom-contents">
-						<div>© Que-it 2014                                                                                                                                                                                                                                                                                                                                                                       </div>
+						<div>  © Que-it 2014                                                                                                                                                                                                                                                                                                                                                                       </div>
 						<div class="hidden"> <a rel="nofollow" href="#title">[Back To Top]</a></div>
 					</div>
 				</div> <!-- page-bottom -->
