--- a/urbanbyte/line-it.html
+++ b/urbanbyte/line-it.html
@@ -34,13 +34,12 @@
 							<div id="sitemenu-content">
 								<ul>
 									<li class="i1 o"><a href="./" title="Welcome"><span class="in">Home</span></a></li>
-									<li class="i2 e"><a href="about.html" title="About"><span class="in">About</span></a></li>
-									<li class="i3 o"><a href="que-it.html" title="QUE IT"><span class="in">QUE IT</span></a></li>
-									<li class="i4 e currentPage"><span class="in">LINE IT</span></li>
-									<li class="i5 o"><a href="developers/" title="Developers"><span class="in">Developers</span></a></li>
-									<li class="i6 e"><a href="faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
-									<li class="i7 o"><a href="get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
-									<li class="i8 e last-item last"><a href="contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
+									<li class="i2 e"><a href="que-it.html" title="QUE IT"><span class="in">QUE IT</span></a></li>
+									<li class="i3 o currentPage"><span class="in">LINE IT</span></li>
+									<li class="i4 e"><a href="developers/" title="Developers"><span class="in">Developers</span></a></li>
+									<li class="i5 o"><a href="faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
+									<li class="i6 e"><a href="get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
+									<li class="i7 o last-item last"><a href="contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
 								</ul>
 							</div> <!-- /sitemenu-content -->
 						</div> <!-- /sitemenu -->
@@ -86,7 +85,7 @@
 							<div class="article">
 								<div class="article-content">
 									<div class="RichTextElement">
-										<div><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 14px;">Line-It is an application which has been developed to allow stage managers to load a PDF script into the application. While in rehearsal, the stage management staff can use the application to identify a line that a performer has missed or said incorrectly. They can then circle that line, or group of lines, and a pop up box will appear and give them a list of the cast to choose from for the note. These pages will be bookmarked and referenced to the performer who missed the line. </span><span style="font-size: 14px; font-family: Skia; color: rgb(53, 75, 117);">These notes are saved and organized by performer. When prompted, the app will send an e-mail to each performer with their notes for the session.</span><span style="font-family: Skia;">     </span></p><p class="MsoNormal"><span style="font-family: Skia;"><br /></span></p><p class="MsoNormal"><span style="color: rgb(79, 113, 174); font-family: Futura, 'Century Gothic', AppleGothic, Verdana, sans-serif; font-size: 19px; font-style: normal; font-variant: normal;">                      Software for the 21st Century Artisan</span><span style="font-family: Skia;">        </span></p></div>
+										<div><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 14px;">Line-It is an application which has been developed to allow stage managers to load a PDF script into the application and manage line notes from within a digital environment. While in rehearsal, the stage management staff can use the application to identify a line that a performer has missed or said incorrectly. They can then circle that line, or group of lines, and a pop up box will appear and give them a list of the cast to choose from for the note. These pages will be bookmarked and referenced to the performer who missed the line. </span><span style="font-size: 14px; font-family: Skia; color: rgb(53, 75, 117);">These notes are saved and organized by performer. When prompted, the app will send an e-mail to each performer with their notes for the session.</span><span style="font-family: Skia;">     </span></p><p class="MsoNormal"><span style="font-family: Skia;"><br /></span></p><p class="MsoNormal"><span style="color: rgb(79, 113, 174); font-family: Futura, 'Century Gothic', AppleGothic, Verdana, sans-serif; font-size: 19px; font-style: normal; font-variant: normal;">                      Software for the 21st Century Artisan</span><span style="font-family: Skia;">        </span></p></div>
 									</div>
 								</div> <!-- /article-content -->
 								<div class="article-info">
