--- a/urbanbyte/developers/index.html
+++ b/urbanbyte/developers/index.html
@@ -35,13 +35,12 @@
 							<div id="sitemenu-content">
 								<ul>
 									<li class="i1 o"><a href="../" title="Welcome"><span class="in">Home</span></a></li>
-									<li class="i2 e"><a href="../about.html" title="About"><span class="in">About</span></a></li>
-									<li class="i3 o"><a href="../que-it.html" title="QUE IT"><span class="in">QUE IT</span></a></li>
-									<li class="i4 e"><a href="../line-it.html" title="LINE IT"><span class="in">LINE IT</span></a></li>
-									<li class="i5 o currentPage"><span class="in">Developers</span></li>
-									<li class="i6 e"><a href="../faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
-									<li class="i7 o"><a href="../get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
-									<li class="i8 e last-item last"><a href="../contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
+									<li class="i2 e"><a href="../que-it.html" title="QUE IT"><span class="in">QUE IT</span></a></li>
+									<li class="i3 o"><a href="../line-it.html" title="LINE IT"><span class="in">LINE IT</span></a></li>
+									<li class="i4 e currentPage"><span class="in">Developers</span></li>
+									<li class="i5 o"><a href="../faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
+									<li class="i6 e"><a href="../get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
+									<li class="i7 o last-item last"><a href="../contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
 								</ul>
 							</div> <!-- /sitemenu-content -->
 						</div> <!-- /sitemenu -->
