--- a/urbanbyte/developers/index.html
+++ b/urbanbyte/developers/index.html
@@ -39,8 +39,7 @@
 									<li class="i3 o"><a href="../line-it.html" title="LINE IT"><span class="in">LINE IT</span></a></li>
 									<li class="i4 e currentPage"><span class="in">Developers</span></li>
 									<li class="i5 o"><a href="../faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
-									<li class="i6 e"><a href="../get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
-									<li class="i7 o last-item last"><a href="../contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
+									<li class="i6 e last-item last"><a href="../get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
 								</ul>
 							</div> <!-- /sitemenu-content -->
 						</div> <!-- /sitemenu -->
@@ -97,23 +96,24 @@
 														<!-- sandvox.ImageElement --><img src="../_Media/annmarie-395_2_med_hr.jpeg" alt="annmarie-395 2" width="76" height="104" />
 														<!-- /sandvox.ImageElement --></div>
 												</div>
-											</div><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-size: 18px; font-family: Skia; text-shadow: rgba(0, 0, 0, 0.333333) 1px -1px;">Annmarie Duggan:</span><span style="font-size: 18px; font-family: Skia; color: rgb(52, 75, 116);"> Annmarie brings more
-																																																																																									than 25 years of experience working in theatre to the development of Que It. Ms.
-																																																																																									Duggan is a lighting designer with more than 350 shows to her credit. She currently
-																																																																																									is an Associate Professor and Chair of the University of Pittsburgh Theatre
-																																																																																									Arts Department teaching Lighting Design &amp; Stage Management.  Ms. Duggan holds an MFA in Lighting Design from The
-																																																																																									University of Arizona. Other credits include Production Managing
-																																																																																									for American Girl Place; New York, NY and Los Angeles were she was the theatre
-																																																																																									consultant in the build out and equipping of two new theatre spaces. Ms. Duggan
-																																																																																									is a Member of  </span></p><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-size: 18px; font-family: Skia;">To see her design work visit</span><span style="font-size: 18px; font-family: Skia; color: rgb(255, 255, 255);"> <a href="http://www.amddesignonline.com/Site/Annmarie_Duggan.html">http://www.amddesignonline.com</a>.</span></p>
+											</div><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-size: 18px; font-family: Skia; text-shadow: rgba(0, 0, 0, 0.333333) 1px -1px;">Annmarie Duggan: <a href="mailto:info@urbanbyte.io">(annmarie@urbanbyte.io)</a></span><span style="font-size: 18px; font-family: Skia; color: rgb(52, 75, 116);"> Annmarie brings more
+																																																																																																															than 25 years of experience working in theatre to the development of Que It. Ms.
+																																																																																																															Duggan is a lighting designer with more than 350 shows to her credit. She currently
+																																																																																																															is an Associate Professor and Chair of the University of Pittsburgh Theatre
+																																																																																																															Arts Department teaching Lighting Design &amp; Stage Management.  Ms. Duggan holds an MFA in Lighting Design from The
+																																																																																																															University of Arizona. Other credits include Production Managing
+																																																																																																															for American Girl Place; New York, NY and Los Angeles were she was the theatre
+																																																																																																															consultant in the build out and equipping of two new theatre spaces. Ms. Duggan
+																																																																																																															is a Member of  </span></p><p class="MsoNormal"><span style="color: rgb(53, 75, 117); font-size: 18px; font-family: Skia;">To see her design work visit</span><span style="font-size: 18px; font-family: Skia; color: rgb(255, 255, 255);"> <a href="http://www.amddesignonline.com/Site/Annmarie_Duggan.html">http://www.amddesignonline.com</a>.</span></p>
 											<p><span style="font-family: Skia; font-size: 19px; font-style: normal; font-variant: normal;"><br /></span></p>
+											
 											<div class="not-first-item graphic-container wide left ImageElement">
 												<div class="graphic">
 													<div class="figure-content">
 														<!-- sandvox.ImageElement --><img src="../_Media/chris-1_med_hr.jpeg" alt="Chris 1" width="74" height="104" />
 														<!-- /sandvox.ImageElement --></div>
 												</div>
-											</div><p><span style="color: rgb(57, 82, 128); font-size: 18px; font-family: Skia; font-variant: normal; text-shadow: rgba(0, 0, 0, 0.333333) 1px -1px;">Christopher Resing: </span><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 18px;">Chris currently works full time as a software engineer for Viz located on Pittsburgh’s south side. Prior to his engineering career, Chris worked in New York City as a lighting systems technician. Highlights include: the Bank of America Tower, The David Koch Theatre and the K.C. Icon       Bridge in Kansas City.</span></p><p><br /></p><p><br /></p><p><br /></p>
+											</div><p><span style="color: rgb(57, 82, 128); font-size: 18px; font-family: Skia; font-variant: normal; text-shadow: rgba(0, 0, 0, 0.333333) 1px -1px;">Christopher Resing: <a href="mailto:chris@urbanbyte.io">(chris@urbanbyte.io)</a><a href="http://example.com" target="_blank"> </a></span><span style="color: rgb(53, 75, 117); font-family: Skia; font-size: 18px;">Chris currently works full time as a software engineer for Viz located on Pittsburgh’s south side. Prior to his engineering career, Chris worked in New York City as a lighting systems technician. Highlights include: the Bank of America Tower, The David Koch Theatre and the K.C. Icon       Bridge in Kansas City.</span></p><p><br /></p><p><br /></p><p><br /></p>
 											
 										</div>
 									</div>
