--- a/urbanbyte/get-started-line-it-/index.html
+++ b/urbanbyte/get-started-line-it-/index.html
@@ -39,8 +39,7 @@
 									<li class="i3 o"><a href="../line-it.html" title="LINE IT"><span class="in">LINE IT</span></a></li>
 									<li class="i4 e"><a href="../developers/" title="Developers"><span class="in">Developers</span></a></li>
 									<li class="i5 o"><a href="../faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
-									<li class="i6 e currentPage"><span class="in">Get Started Line-It</span></li>
-									<li class="i7 o last-item last"><a href="../contact-us.html" title="Contact Us"><span class="in">Contact Us</span></a></li>
+									<li class="i6 e last-item last currentPage"><span class="in">Get Started Line-It</span></li>
 								</ul>
 							</div> <!-- /sitemenu-content -->
 						</div> <!-- /sitemenu -->
