--- a/urbanbyte/index.html
+++ b/urbanbyte/index.html
@@ -40,7 +40,8 @@
 									<li class="i3 o"><a href="line-it.html" title="LINE IT"><span class="in">LINE IT</span></a></li>
 									<li class="i4 e"><a href="developers/" title="Developers"><span class="in">Developers</span></a></li>
 									<li class="i5 o"><a href="faq/" title="Get Started Que-It"><span class="in">Get Started Que-It</span></a></li>
-									<li class="i6 e last-item last"><a href="get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
+									<li class="i6 e"><a href="get-started-line-it-/" title="Get Started Line-It"><span class="in">Get Started Line-It</span></a></li>
+									<li class="i7 o last-item last"><a href="contact-us/" title="Contact Us"><span class="in">Contact Us</span></a></li>
 								</ul>
 							</div> <!-- /sitemenu-content -->
 						</div> <!-- /sitemenu -->
@@ -101,7 +102,7 @@
 				<div class="clear below-content"></div>
 				<div id="page-bottom">
 					<div id="page-bottom-contents">
-						<div>  © Que-it 2014                                                                                                                                                                                                                                                                                                                                                                       </div>
+						<div>  © Que-it 2014 <span style="font-size: 14px; font-family: HelveticaNeue;"><a href="mailto:info@urbanbyte.io" style="font-variant: normal;">info@urbanbyte.io</a></span><span style="color: rgb(53, 75, 117); font-variant: normal; background-color: rgb(255, 255, 255); font-size: 14px; font-family: HelveticaNeue;"> </span><span style="font-family: HelveticaNeue;"> </span>                                                                                                                                                                                                                                                                                                                                                                      </div>
 						<div class="hidden"> <a rel="nofollow" href="#title">[Back To Top]</a></div>
 					</div>
 				</div> <!-- page-bottom -->
