added contact info

--- a/urbanbyte/contact-us/index.html
+++ b/urbanbyte/contact-us/index.html
@@ -57,8 +57,8 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="../_Media/sidebar_med-2.png" data-img-src-hr="../_Media/sidebar_med_hr-2.png" data-alt="Line!Icon128x128" data-width="128" data-height="215" style="width:128px; height:215px;">
-														<noscript><img src="../_Media/sidebar_med-2.png" alt="Line!Icon128x128" width="128" height="215" /></noscript>
+													<!-- sandvox.ImageElement --><span data-img-src="../_Media/sidebar_med-3.png" data-img-src-hr="../_Media/sidebar_med_hr-3.png" data-alt="Line!Icon128x128" data-width="128" data-height="215" style="width:128px; height:215px;">
+														<noscript><img src="../_Media/sidebar_med-3.png" alt="Line!Icon128x128" width="128" height="215" /></noscript>
 													</span>
 													<!-- /sandvox.ImageElement -->
 												</div>
@@ -67,11 +67,11 @@
 									</div>
 								</div>
 								<div class="pagelet titled i2 e last-item">
-									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  COMING SOON!</span></span></h4>
+									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  Buy Now!</span></span></h4>
 									<div class="pagelet-body">
 										<div class="RichTextElement">
 											<div>
-												<p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;">Will be available in</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> the iTunes Store,</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> March 2016</span></p>
+												<p style="text-align: center;" class="MsoNormal"><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1090772813&amp;mt=8" target="_blank"><img src="../_Media/badge_med_hr.jpeg" alt="" width="200" height="59" class="first" /></a></p>
 												
 											</div>
 										</div>
