--- a/urbanbyte/index.html
+++ b/urbanbyte/index.html
@@ -54,12 +54,23 @@
 							<div id="sidebar-top"></div>
 							<div id="sidebar-content">
 								<h3 class="hidden">Sidebar<a rel="nofollow" href="#main">[Skip]</a></h3>
-								<div class="pagelet titled i1 o last-item">
-									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  COMING SOON!</span></span></h4>
+								<div class="pagelet untitled i1 o">
+									<div class="pagelet-body">
+										<div class="ImageElement">
+											<div class="photo">
+												<div>
+													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><img src="_Media/fb_med_hr.png" alt="FB" width="100" height="101" /></a>
+													<!-- /sandvox.ImageElement --></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="pagelet titled i2 e last-item">
+									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  Buy Now!</span></span></h4>
 									<div class="pagelet-body">
 										<div class="RichTextElement">
 											<div>
-												<p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;">Will be available in</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> the iTunes Store,</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> March 2016</span></p>
+												<p style="text-align: center;" class="MsoNormal"><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1090772813&amp;mt=8" target="_blank"><img src="_Media/badge_med_hr.jpeg" alt="" width="200" height="59" class="first" /></a></p>
 												
 											</div>
 										</div>
