--- a/urbanbyte/get-started-line-it-/index.html
+++ b/urbanbyte/get-started-line-it-/index.html
@@ -58,8 +58,8 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="../_Media/sidebar_med-2.png" data-img-src-hr="../_Media/sidebar_med_hr-2.png" data-alt="Line!Icon128x128" data-width="128" data-height="215" style="width:128px; height:215px;">
-														<noscript><img src="../_Media/sidebar_med-2.png" alt="Line!Icon128x128" width="128" height="215" /></noscript>
+													<!-- sandvox.ImageElement --><span data-img-src="../_Media/sidebar_med-3.png" data-img-src-hr="../_Media/sidebar_med_hr-3.png" data-alt="Line!Icon128x128" data-width="128" data-height="215" style="width:128px; height:215px;">
+														<noscript><img src="../_Media/sidebar_med-3.png" alt="Line!Icon128x128" width="128" height="215" /></noscript>
 													</span>
 													<!-- /sandvox.ImageElement -->
 												</div>
@@ -67,12 +67,37 @@
 										</div>
 									</div>
 								</div>
-								<div class="pagelet titled i2 e last-item">
-									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  COMING SOON!</span></span></h4>
+								<div class="pagelet untitled i2 e">
+									<div class="pagelet-body">
+										<div class="ImageElement">
+											<div class="photo">
+												<div>
+													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><img src="../_Media/fb_med_hr.png" alt="FB" width="100" height="101" /></a>
+													<!-- /sandvox.ImageElement --></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="pagelet untitled i3 o">
+									<div class="pagelet-body">
+										<div class="ImageElement">
+											<div class="photo">
+												<div>
+													<!-- sandvox.ImageElement --><span data-img-src="../_Media/tube_med.png" data-img-src-hr="../_Media/tube_med_hr.png" data-alt="Tube" data-width="228" data-height="89" style="width:228px; height:89px;">
+														<noscript><img src="../_Media/tube_med.png" alt="Tube" width="228" height="89" /></noscript>
+													</span>
+													<!-- /sandvox.ImageElement -->
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="pagelet titled i4 e last-item">
+									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  Buy Now!</span></span></h4>
 									<div class="pagelet-body">
 										<div class="RichTextElement">
 											<div>
-												<p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;">Will be available in</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> the iTunes Store,</span></p><p style="text-align: center;" class="MsoNormal"><span style="color: rgb(61, 96, 128); font-size: 24px; font-family: Skia;"> March 2016</span></p>
+												<p style="text-align: center;" class="MsoNormal"><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1090772813&amp;mt=8" target="_blank"><img src="../_Media/badge_med_hr.jpeg" alt="" width="200" height="59" class="first" /></a></p>
 												
 											</div>
 										</div>
