fixed youtube link

--- a/urbanbyte/get-started-line-it-/index.html
+++ b/urbanbyte/get-started-line-it-/index.html
@@ -83,9 +83,10 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="../_Media/tube_med.png" data-img-src-hr="../_Media/tube_med_hr.png" data-alt="Tube" data-width="228" data-height="89" style="width:228px; height:89px;">
-														<noscript><img src="../_Media/tube_med.png" alt="Tube" width="228" height="89" /></noscript>
-													</span>
+													<!-- sandvox.ImageElement --><a href="https://www.youtube.com/channel/UCptEWBggK-TMCbxg2114zIw" target="_blank" class="imageLink"><span data-img-src="../_Media/tube_med.png" data-img-src-hr="../_Media/tube_med_hr.png" data-alt="Tube" data-width="228" data-height="89" style="width:228px; height:89px;">
+															<noscript><img src="../_Media/tube_med.png" alt="Tube" width="228" height="89" /></noscript>
+														</span>
+													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
 											</div>
